# ROS-Mobile-Robot

./: README.md
CAD & PNG Files/: 0.42x0.32x0.15m box.stp  Alu_profil_40x40x165.stp  Alu_profil_80x40.stp  Assembly_Robot.x_t  Bolt_M8x16.stp  Bottom_Cover.stp  Corner_bracket_I_type.stp  Corner_bracket_cover_cap.stp  Drive_Wheel.stp  Holeplate_front.stp  Mountig_Bracket_M8.stp  RearWheel_mounting_plate.par  Swivel caster.par  Swivel caster.stp  Top_265mm.par  Top_Cover.par  Top_Cover.stp  lock_nut.stp  rplidar_base_holder.STL
ROMR CAD Assembly/: romr_full_assembly.asm
ROS Workspace/src/: CMakeLists.txt
ROS Workspace/src/config/: joint_names_romr_robot.yaml  romr_navigation.rviz  rviz_config.rviz
ROS Workspace/src/gazebo/: romr.trans  romr_gazebo_plugins.gazebo
ROS Workspace/src/launch/: gazebo.launch  move_base.launch  romr_bringup.launch  romr_rviz.launch
ROS Workspace/src/urdf/: romr_assem.csv
STL & PNG Files/: 0.42x0.32x0.15m box.par  Alu_profil_40x40.par  Alu_profil_40x40x165.par  Alu_profil_40x40x37.par  Alu_profil_80x40.par  Arduino.par  Assembly_Robot.cfg  Battery_Pack.par  Bolt_M8x16.par  Bottom_Cover.par  Break_Resistor.par  Camera1.par  Camera2.par  Corner_40x40mm.par  Corner_40x40mm_mir.par  Corner_40x40mm_mir1.par  Corner_40x40mm_mir11.par  Corner_40x40mm_mir111.par  Corner_40x40mm_mir2.par  Corner_40x40mm_mir21.par  Corner_40x40mm_mir3.par  Corner_40x40mm_mir31.par  Corner_40x40mm_mir32.par  Corner_40x40mm_mir4.par  Corner_40x40mm_mir5.par  Corner_40x40mm_mir6.par  Corner_bracket_cover_cap.par  Cover_40x40mm.par  Drive_Wheel.par  Jetson.par  (+14 more)
(+41 files in other folders)
